--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@
             </div>
 
             <div class="col-lg-6">
-              <form method="post" role="form" class="php-email-form">
-                <div class="row gy-3">
+              <form method="post" id="php-email-form">
 
+                <div class="row gy-3">
                   <div class="col-lg-6">
                     <div class="form-group contact-block1">
                       <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -618,13 +618,13 @@
                   </div>
 
                   <div class="col-lg-12">
-                    <div class="loading">Loading</div>
+                    <!-- <div class="loading">Loading</div> -->
                     <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                    <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
                   </div>
 
                   <div class="mt-0">
-                    <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                    <input type="submit" class="btn btn-success" value="Send message">
                   </div>
 
                 </div>
@@ -674,10 +674,10 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="assets/vendor/glightbox/js/glightbox.min.js"></script> -->
-  <!-- <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script> -->
-  <!-- <script src="assets/vendor/swiper/swiper-bundle.min.js"></script> -->
-  <!-- <script src="assets/vendor/typed.js/typed.min.js"></script> -->
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script>
